# boulot-robot

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.cmake/: check-format.cmake
.github/workflows/: ci.yml  clang-format.yml  main.yml  static-analysis.yml
cmake/: CheckFormat.cmake
docs/: tooling.md
io-interface/: CMakeLists.txt
io-interface/include/: ultra_sonic_sensor.hpp
io-interface/include/io-interface/: ultra_sonic_sensor.hpp
io-interface/src/: CMakeLists.txt  ultra_sonic_sensor.cpp
io-interface/src/raspi/: ultra_sonic_sensor.cpp
libs/: CMakeLists.txt
libs/io-interface/: CMakeLists.txt
libs/io-interface/include/io-interface/: ultra_sonic_sensor.hpp
libs/io-interface/src/raspi/: CMakeLists.txt  ultra-sonic-sensor.cpp
libs/path-planning/src/: CMakeLists.txt  map-impl.cpp  map-impl.hpp  map.cpp  obstacle-circle.cpp  obstacle-rectangle.cpp  obstacle-rectangle.hpp  obstacle.cpp  obstacle_circle.cpp  point.cpp  quadtree.cpp  quadtree.hpp  rectangle.cpp
libs/path-planning/tests/: CMakeLists.txt  test_obstacle_rectangle.cpp
libs/robotlib/include/robotlib/: proximity-handler.hpp
libs/robotlib/src/: CMakeLists.txt  proximity-handler.cpp  proximity_handler.cpp
libs/robotlib/tests/: CMakeLists.txt  test-proximity-detection.cpp
libs/visualization/include/visualization/: line.hpp  point.hpp  rectangle.hpp  renderer.hpp
libs/visualization/src/: CMakeLists.txt  circle.cpp  line.cpp  point.cpp  renderer.cpp  svg-renderer.cpp  svg-renderer.hpp  svg_renderer.hpp  xml-node.cpp  xml-node.hpp  xml_node.cpp
path-planning/: CMakeLists.txt
path-planning/include/: map.hpp  obstacle.hpp  point.hpp  zone.hpp
path-planning/include/path-planning/: map.hpp  math_utils.hpp  obstacle.hpp  point.hpp  shape.hpp  zone.hpp
path-planning/src/: CMakeLists.txt  map.cpp  map_impl.cpp  map_impl.hpp  math_utils.hpp  obstacle.cpp  obstacle_circle.cpp  obstacle_circle.hpp  obstacle_rectangle.cpp  obstacle_rectangle.hpp  point.cpp  quadtree.cpp  quadtree.hpp  quadtree_node.cpp  quadtree_node_children.cpp  rectangle.cpp  rectangular_zone.cpp
path-planning/tests/: CMakeLists.txt  test_map.cpp  test_obstacle_circle.cpp  test_obstacle_rectangle.cpp  test_quadtree.cpp
robotlib/: CMakeLists.txt
robotlib/include/: placeholder.hpp
robotlib/include/robotlib/: proximity_handler.hpp
robotlib/src/: CMakeLists.txt  placeholder.cpp  proximity_handler.cpp
robotlib/tests/: CMakeLists.txt  test-proximity-detection.cpp
visualization/: CMakeLists.txt
visualization/include/visualization/: circle.hpp  line.hpp  point.hpp  rectangle.hpp  render.hpp  renderer.hpp  svg.hpp  xml_node.hpp
visualization/src/: CMakeLists.txt  circle.cpp  line.cpp  point.cpp  rectangle.cpp  renderer.cpp  svg.cpp  svg_renderer.cpp  svg_renderer.hpp  xml_node.cpp  xml_node.hpp
visualization/tests/: CMakeLists.txt  main.cpp
